tests/js/invalid/string/size-0.buri
size = "hello":size("2")